tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImportDts.errors.txt
client.ts(1,8): error TS1192: Module '"server"' has no default export.
client.ts(2,8): error TS1192: Module '"server"' has no default export.
client.ts(4,8): error TS1192: Module '"server"' has no default export.
client.ts(6,8): error TS1192: Module '"server"' has no default export.
client.ts(9,8): error TS1192: Module '"server"' has no default export.
client.ts(11,8): error TS1192: Module '"server"' has no default export.


==== server.ts (0 errors) ====
    export class a { }
    export class x { }
    export class m { }
    export class a11 { }
    export class a12 { }
    export class x11 { }
    
==== client.ts (6 errors) ====
    import defaultBinding1, { } from "./server";
           ~~~~~~~~~~~~~~~
!!! error TS1192: Module '"server"' has no default export.
    import defaultBinding2, { a } from "./server";
           ~~~~~~~~~~~~~~~
!!! error TS1192: Module '"server"' has no default export.
    export var x1 = new a();
    import defaultBinding3, { a11 as b } from "./server";
           ~~~~~~~~~~~~~~~
!!! error TS1192: Module '"server"' has no default export.
    export var x2 = new b();
    import defaultBinding4, { x, a12 as y } from "./server";
           ~~~~~~~~~~~~~~~
!!! error TS1192: Module '"server"' has no default export.
    export var x4 = new x();
    export var x5 = new y();
    import defaultBinding5, { x11 as z,  } from "./server";
           ~~~~~~~~~~~~~~~
!!! error TS1192: Module '"server"' has no default export.
    export var x3 = new z();
    import defaultBinding6, { m,  } from "./server";
           ~~~~~~~~~~~~~~~
!!! error TS1192: Module '"server"' has no default export.
    export var x6 = new m();
    